dboperatator/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: books
spec:
  selector:
    matchLabels:
      app: books
  replicas: 1
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: 'quay.io/redhattraining/books:v1.4'
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
