dboperatator/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: books
spec:
  selector:
    app: books
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
